reformat files and add mutation